# OCCT-OpenGL-Deom

./: CMakeLists.txt  README.md
include/App/: MainWindow.h
include/Occt/: MeshTypes.h  ObjExporter.h  OcctViewerWidget.h
src/: main.cpp
src/App/: MainWindow.cpp
src/Occt/: ObjExporter.cpp  OcctViewerWidget.cpp
